fix: field event_date of transaction entity changed to created_at
